--- a/css/1600.css
+++ b/css/1600.css
@@ -1,4 +1,15 @@
 @media only screen and (max-width: 1599px){}
+/*screen*/
+.screen__logo{
+	width: 172px;
+	left: 66px;
+}
+.screen__title{
+	font-size: 30px;
+	line-height: 40px;
+	padding-left: 260px;
+}
+/*screen end*/
 /*tabs*/
 .tab-controls li, .user-content .tab-controls li, .user-content .tab-controls li:first-child {
 	font-size: 30px;
