--- a/css/all.css
+++ b/css/all.css
@@ -1189,7 +1189,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	transition: all 0.3s;
 	backface-visibility: hidden;
 }
-.social-networks a:hover:before{
+.desktop .social-networks a:hover:before{
 	opacity: 1;
 	width: 40px;
 	height: 40px;
@@ -1210,7 +1210,7 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	-webkit-transition: border 0.3s 0.1s;
 	transition: border 0.3s 0.1s;
 }
-.social-networks a:hover:after{ border-color: transparent; }
+.desktop .social-networks a:hover:after{ border-color: transparent; }
 .social-networks a>[class*="depict-"]{
 	position: absolute;
 	left: 50%;
@@ -1222,8 +1222,8 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	transition: opacity 0.4s 0.05s;
 }
 .social-networks a>[class$="-h"]{ opacity: 0; }
-.social-networks a:hover>[class*="depict-"]{ opacity: 0; }
-.social-networks a:hover>[class$="-h"]{ opacity: 1; }
+.desktop .social-networks a:hover>[class*="depict-"]{ opacity: 0; }
+.desktop .social-networks a:hover>[class$="-h"]{ opacity: 1; }
 /*social networks end*/
 
 /*social*/
@@ -2205,7 +2205,6 @@ div.cselect .ui-multiselect-checkboxes input[type="radio"] + span:after{ content
 	width: 100%;
 	height: 100%;
 	margin-right: -100%;
-	min-height: 434px;
 }
 .previews__item_lg .previews__img:after{
 	content: '';
