--- a/css/1280.css
+++ b/css/1280.css
@@ -34,6 +34,18 @@
 .previews__item:nth-child(3){ display: inline-block; }
 /*previews end*/
 
+/*FILTERS*/
+.filters__group:nth-child(2){
+	float: none;
+	overflow: hidden;
+}
+.filters__group:last-child{
+	overflow: visible;
+	float: left;
+	min-width: 280px;
+}
+/*FILTERS end*/
+
 /*main navigation*/
 .nav-drop__group{
 	padding: 25px 30px;
