--- a/css/1600.css
+++ b/css/1600.css
@@ -33,7 +33,8 @@
 	min-height: 72px;
 }
 .filters__group .button,
-.filters__group .filters-counter{
+.filters__group .filters-counter,
+.btn-filter-opener{
 	padding: 5px 10px;
 	min-height: 42px;
 }
@@ -44,6 +45,17 @@
 }
 .search-form .btn-search { right: 15px; }
 .filters__group:nth-child(3){ clear: left; }
+.filters-drop__holder { padding: 34px 30px 14px; }
+.filters-drop__list,
+.user-content .filters-drop__list {
+	margin: 0 -5px 0 -10px;
+}
+.filters-drop__list li,
+.user-content .filters-drop__list li,
+.user-content .filters-drop__list li:first-child {
+	padding: 0 5px 20px 10px;
+	width: 24.98%;
+}
 /*FILTERS end*/
 
 /*FOOTER*/
