--- a/css/980.css
+++ b/css/980.css
@@ -12,9 +12,7 @@
 	background-size: 100%;
 }
 
-/*buttons*/
-.buttons { padding: 35px 30px 55px; }
-/*buttons end*/
+.buttons,
 .load-more{ padding: 35px 30px 55px; }
 .section-title{ padding: 55px 30px 35px; }
 
@@ -60,6 +58,7 @@
 	border-top: 1px solid #d8d8d8;
 	height: auto !important;
 	min-height: 0 !important;
+	width: 320px;
 }
 .nav-drop__group:first-child { border: none; }
 .nav-drop__title{
